--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "frame-interval": "^1.0.47",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.1",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/react": "17.0.25",
+    "@types/styled-components": "^5.1.14",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.3"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
